--- a/data/sources.yaml
+++ b/data/sources.yaml
@@ -40,32 +40,29 @@
   shortPublisher: IEEE TMC'25
 
 # GPSoil: Towards low-cost soil moisture sensing using GNSS signals
-- url: https://metaiot.group/publication/paper/10.1212.xxxx
+- id: doi:10.1145/3680207.3765236
   type: conference
-  title: 'GPSoil: Towards low-cost soil moisture sensing using GNSS signals'
   co-author: true
   highlight: true
-  date: 2025-11-22
-  authors:
-    - Huixin Dong
-    - Jingqi Lin
-    - Minhao Cui
-    - Serene Zhang
-    - Lili Qiu
-    - Jie Xiong
-    - Wei Wang
-  publisher: Proceedings of the 31th Annual International Conference on Mobile Computing
-    and Networking
   shortPublisher: ACM MobiCom'25
-  # buttons:
-  #   - type: docs
-  #     text: PDF
-  #     link: https://arxiv.org/pdf/2503.11490
   tags:
     - GPS Sensing
 
+# PassiveBLE: Towards Fully Commodity-Compatible BLE Backscatter
+- id: doi:10.1145/3680207.3723465
+  type: conference
+  co-author: true
+  highlight: true
+  shortPublisher: ACM MobiCom'25
+  buttons:
+    - type: docs
+      text: PDF
+      link: https://arxiv.org/pdf/2503.11490
+  tags:
+    - BLE Backscatter
+
 # SE: Self-Supervised State Estimation for Radar-Inertial System
-- url: https://iccv.thecvf.com/virtual/2025/poster/2131
+- url: https://openaccess.thecvf.com/content/ICCV2025/html/Wang_S3E_Self-Supervised_State_Estimation_for_Radar-Inertial_System_ICCV_2025_paper.html
   type: conference
   title: 'S^3E: Self-Supervised State Estimation for Radar-Inertial System'
   co-author: true
@@ -87,18 +84,10 @@
     - ICCV
 
 # SDDiff: Boost Radar Perception via Spatial-Doppler Diffusion
-- url: https://metaiot.group/publication/paper/10.1100.xxxx
+- id: doi:10.24963/ijcai.2025/979
   type: conference
-  title: 'SDDiff: Boost Radar Perception via Spatial-Doppler Diffusion'
   co-author: true
   highlight: true
-  date: 2025-08-23
-  authors:
-    - Shengpeng Wang
-    - Xin Luo
-    - Yulong Xie
-    - Wei Wang
-  publisher: Proceedings of the Thirty-Fourth International Joint Conference on Artificial Intelligence
   shortPublisher: IJCAI'25
   buttons:
     - type: docs
@@ -107,44 +96,10 @@
   tags:
     - mmWave Radar
 
-# PassiveBLE: Towards Fully Commodity-Compatible BLE Backscatter
-- url: https://metaiot.group/publication/paper/10.1125.xxxx
-  type: conference
-  title: 'PassiveBLE: Towards Fully Commodity-Compatible BLE Backscatter'
-  co-author: true
-  highlight: true
-  date: 2025-11-22
-  authors:
-    - Huixin Dong
-    - Yijie Wu
-    - Feiyu Li
-    - Wei Kuang
-    - Yuan He
-    - Qian Zhang
-    - Wei Wang
-  publisher: Proceedings of the 31th Annual International Conference on Mobile Computing
-    and Networking
-  shortPublisher: ACM MobiCom'25
-  buttons:
-    - type: docs
-      text: PDF
-      link: https://arxiv.org/pdf/2503.11490
-  tags:
-    - BLE Backscatter
-
 # PDStream: Slashing Long-Tail Delay in Interactive Video
-- url: https://metaiot.group/publication/paper/10.1145.xxx
+- id: doi:10.1109/INFOCOM55648.2025.11044674
   type: conference
-  title: 'PDStream: Slashing Long-Tail Delay in Interactive Video Streaming via Pseudo-Dua Streaming'
   co-author: true
-  date: 2025-05-22
-  authors:
-    - Xuedou Xiao
-    - Yingying Zuo
-    - Mingxuan Yan
-    - Kezhong Liu
-    - Wei Wang
-  publisher: IEEE Conference on Computer Communications
   shortPublisher: IEEE INFOCOM'25
   buttons:
     - type: docs
@@ -154,17 +109,9 @@
     - Video Streaming
 
 # Improving Multi-Vehicle Perception Fusion with Millimeter-Wave Radar Assistance
-- url: https://metaiot.group/publication/paper/10.1145/3636534.xxx
+- id: doi:10.1109/INFOCOM55648.2025.11044604
   type: conference
-  title: 'Improving Multi-Vehicle Perception Fusion with Millimeter-Wave Radar Assistance'
   co-author: true
-  date: 2025-05-22
-  authors:
-    - Zhiqing Luo
-    - Yi Wang
-    - Yingying He
-    - Wei Wang
-  publisher: IEEE Conference on Computer Communications
   shortPublisher: IEEE INFOCOM'25
   tags:
     - Cooperative Perception
