--- a/.github/workflows/r2-upload.yml
+++ b/.github/workflows/r2-upload.yml
@@ -21,7 +21,7 @@ jobs:
           fetch-depth: 1
 
       - name: Setup Rclone
-        uses: animus-coop/setup-rclone@v1
+        uses: AnimMouse/setup-rclone@v1
         with:
           rclone_version: v1.66.0
 
