--- a/data/sources.yaml
+++ b/data/sources.yaml
@@ -155,13 +155,13 @@
   buttons:
     - type: docs
       text: PDF
-      link: https://metaiot.group/publication/paper/mobicom24-GPSense.pdf
+      link: files/paper/mobicom24-GPSense.pdf
     - type: slides
       text: SLIDES
-      link: /publication/slides/MobiCom2024_GPSense_slides.pdf
+      link: files/slides/MobiCom2024_GPSense_slides.pdf
     - type: video
       text: VIDEO
-      link: https://cdn.metaiot.group/metaiot/video/Mobicom24Demo.mp4
+      link: files/video/Mobicom24Demo.mp4
   tags:
     - GPS Sensing
   
