--- a/hugo.toml
+++ b/hugo.toml
@@ -12,7 +12,7 @@ unsafe = true
 style = "monokai" # Rouge 的替代品，风格可选
 lineNos = false
 
-# 全局参数 (对应 Jekyll 的 site.xyz)
+# 全局参数
 [params]
 subtitle = "Welcome to MetaIoT Lab."
 description = "We create the next generation of intelligent wireless systems for communication and sensing with applications in autonomous systems, mixed reality, and IoT."
@@ -20,10 +20,10 @@ header_image = "images/background.webp"
 footer_image = "images/background.webp"
 google_scholar = "YkD8hs0AAAAJ"
 [params.links]
-    email = "mailto:wangw@whu.edu.cn" # 建议加上 mailto:
-    google-scholar = "https://scholar.google.com/citations?user=YkD8hs0AAAAJ" # 建议补全完整链接
-    github = "https://github.com/weisgroup"
-    youtube = "https://www.youtube.com/channel/WeiWANGWilliam" # 建议补全链接
+    email = "mailto:wangw@whu.edu.cn" 
+    google-scholar = "https://scholar.google.com/citations?user=YkD8hs0AAAAJ"
+    github = "https://github.com/MetaIoT-WHU"
+    youtube = "https://www.youtube.com/channel/WeiWANGWilliam"
 
-# 菜单配置 (稍后我们会用到)
+
 [menu]
