--- a/data/citations.yaml
+++ b/data/citations.yaml
@@ -79,6 +79,13 @@
   - Wei Wang
   publisher: International Conference on Computer Vision, ICCV 2025
   shortPublisher: ICCV'25
+  buttons:
+  - type: docs
+    text: PDF
+    link: https://arxiv.org/abs/2506.16936
+  - type: website
+    text: Project
+    link: https://stellaresti.github.io/sddiff
   tags:
   - mmWave Radar
   - ICCV
@@ -103,6 +110,9 @@
   - type: docs
     text: PDF
     link: https://arxiv.org/abs/2506.16936
+  - type: website
+    text: Project
+    link: https://stellaresti.github.io/sddiff
   tags:
   - mmWave Radar
   plugin: sources.py
@@ -238,10 +248,10 @@
     link: files/paper/mobicom24-GPSense.pdf
   - type: slides
     text: SLIDES
-    link: files/slides/MobiCom2024_GPSense_slides.pdf
+    link: /files/slides/MobiCom2024_GPSense_slides.pdf
   - type: video
     text: VIDEO
-    link: files/video/Mobicom24Demo.mp4
+    link: /files/video/Mobicom24Demo.mp4
   tags:
   - GPS Sensing
   plugin: sources.py
@@ -294,7 +304,7 @@
     link: https://arxiv.org/pdf/2304.07572
   - type: slides
     text: SLIDES
-    link: files/slides/DongGPSMirror.pdf
+    link: /files/slides/DongGPSMirror.pdf
   tags:
   - Backscatter Network
   - GPS Sensing
